--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,12 @@
           "scroll-behavior"
         ]
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
